improvement(browser, safari, javascript, inline): browser specific style bugfixes

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
   <link href="/stylesheets/style.min.css" rel="stylesheet" type="text/css" />
   <link href="/stylesheets/animate.min.css" rel="stylesheet" type="text/css" />
 
+  <!-- Inline script -->
+  <script type="text/javascript">
+    document.documentElement.setAttribute("data-browser", navigator.userAgent);
+  </script>
+
   <!--[if IE]>
     <link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -24,7 +29,7 @@
 </head>
 
 <body id="top">
-  <nav id="navBar" class="navbar navbar-expand-md sticky-top navbar-dark okada">
+  <nav id="navBar" class="navbar sticky-top navbar-dark okada">
     <a class="navbar-brand mx-auto" href="#">
       <img src="images/okada-logo-small.png" width="41" />
     </a>
