fix(responsive, mobile, fonts, cove-manila): adjustments

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 
 <body id="top">
-  <nav id="navBar" class="navbar sticky-top navbar-dark okada">
+  <nav id="navBar" class="navbar navbar-dark okada">
     <a class="navbar-brand mx-auto" href="#">
       <img src="images/okada-logo-small.png" width="41" />
     </a>
