refactor(navbar, responsive, menu, cove-manila): full screen menu

--- a/index.html
+++ b/index.html
@@ -33,52 +33,22 @@
     <a class="navbar-brand mx-auto" href="#">
       <img src="images/okada-logo-small.png" width="41" />
     </a>
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-      data-target="#collapsibleNavbar" aria-controls="collapsibleNavbar" aria-expanded="false"
-      aria-label="Toggle navigation">
+    <button id="openNav" class="navbar-toggler navbar-toggler-right" type="button" data-target="#myNav"
+      aria-controls="myNav" aria-expanded="true" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="collapsibleNavbar">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#top">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">World Class Entertainment</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Guests</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">The Fountain</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">The Restaurants</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Cove Manila</a>
-        </li>
-
-        <!-- <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle waves-effect waves-light" id="navbarDropdownMenuLink"
-            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-          <div class="dropdown-menu dropdown-info" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item waves-effect waves-light" href="#">Dropdown 1</a>
-          </div>
-        </li> -->
-      </ul>
-    </div>
-    <div class="modal-dialog" hidden>
-      <nav class="list-group">
-        <a class="list-group-item" href="#top">Home</a>
-        <a class="list-group-item" href="#">World Class Entertainment</a>
-        <a class="list-group-item" href="#">Guests</a>
-        <a class="list-group-item" href="#">The Fountain</a>
-        <a class="list-group-item" href="#">The Restaurants</a>
-        <a class="list-group-item" href="#">Cove Manila</a>
-      </nav>
-    </div>
   </nav>
+  <div id="myNav" class="nav-overlay">
+    <a href="javascript:void(0)" class="closebtn" id="closeNav">&times;</a>
+    <div class="overlay-content">
+      <a class="nav-modal-link" href="#top">Home</a>
+      <a class="nav-modal-link" href="#">World Class Entertainment</a>
+      <a class="nav-modal-link" href="#">Guests</a>
+      <a class="nav-modal-link" href="#">The Fountain</a>
+      <a class="nav-modal-link" href="#">The Restaurants</a>
+      <a class="nav-modal-link" href="#">Cove Manila</a>
+    </div>
+  </div>
   <div class="container-fluid main-container">
     <div class="row hero-row justify-content-lg-center">
       <div class="col-12 col-sm-12 col-md-12 col-lg-10 p-0">
