improvement(fonts, google, open-sans): replace downloaded fonts with google's stable fonts

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           <p class="dazzling-details">
             The Fountain stands as Okada Manila’s bold take on creating a global icon.
           </p>
-          <button type="button" class="btn btn-dark btn-dazzling">
+          <button type="button" class="btn btn-default btn-dark btn-dazzling">
             LEARN MORE
           </button>
         </div>
