improvement(hero-section, navbar, responsive, mobile): responsive UI adjustments for mobile

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 
 <body id="top">
-  <nav id="navBar" class="navbar navbar-dark okada">
+  <nav id="navBar" class="navbar navbar-dark justify-content-center okada">
     <a class="navbar-brand mx-auto" href="#">
       <img src="images/okada-logo-small.png" width="41" />
     </a>
