--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       </div>
     </div>
     <div id="theRestaurants" class="row the-restaurants-row">
-      <div class="col-12 col-md-4 col-lg-7 col-xl-7 p-0">
+      <div class="col-12 col-md-7 col-lg-7 col-xl-7 p-0 the-restaurants-cols">
         <!-- Swiper -->
         <div id="theRestaurantsSlider" class="swiper-container">
           <div class="swiper-wrapper">
@@ -200,7 +200,7 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-      <div class="col-12 col-md-6 col-lg-5 col-xl-5 the-restaurants-col">
+      <div class="col-12 col-md-5 col-lg-5 col-xl-5 the-restaurants-col the-restaurants-cols">
         <div class="the-restaurants-content">
           <div class="the-restaurants-logo"></div>
           <h1 class="the-restaurants-heading">
