--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </div>
   <div class="container-fluid main-container">
     <div class="row hero-row justify-content-lg-center">
-      <div class="col-12 col-sm-12 col-md-12 col-lg-10 p-0">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-0">
         <div class="grid">
           <div class="image-2020 wow animated fadeIn delay-1s"></div>
           <div class="image-hero-model wow animated fadeIn"></div>
@@ -59,7 +59,7 @@
       </div>
     </div>
     <div class="row countdown-row justify-content-center">
-      <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xs-8">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-9 col-xs-9">
         <div id="countdown" class="countdown-container">
           <div class="number-of days wow fadeInDown animated" data-wow-delay="0.2s">00</div>
           <div class="number-of hours wow fadeInDown animated" data-wow-delay="0.4s">00</div>
@@ -69,11 +69,13 @@
 
         <div class="okada-hero wow animated fadeIn" data-wow-delay="1s">
           <h1 class=" okada-hero-heading">
-            Okada Manila is taking its New Year’s Eve celebrations to bigger, more extravagant levels.
+            Okada Manila is taking its New<br />
+            Year’s Eve celebrations to bigger,<br />
+            more extravagant levels.
           </h1>
           <p class="okada-hero-caption">
-            It’s a full explosion of spectacular performances and special treats that will make this night of partying
-            the
+            It’s a full explosion of spectacular performances and<br />
+            special treats that will make this night of partying the<br />
             metro’s most unforgettable one.
           </p>
         </div>
