--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 
   <title>Okada Manila NYE 2019</title>
 
-  <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/swiper.min.css" rel="stylesheet" type="text/css" />
+  <link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+  <link href="stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
+  <link href="stylesheets/swiper.min.css" rel="stylesheet" type="text/css" />
 
   <!-- Main Style -->
-  <link href="/stylesheets/style.min.css" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/animate.min.css" rel="stylesheet" type="text/css" />
+  <link href="stylesheets/style.min.css" rel="stylesheet" type="text/css" />
+  <link href="stylesheets/animate.min.css" rel="stylesheet" type="text/css" />
 
   <!-- Inline script -->
   <script type="text/javascript">
