refactor(grid, guests, index, desktop): responsive grid layout adjustments

--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
       <div class="col-12 col-md-8 col-lg-7 col-xl-7 image-col"></div>
     </div>
     <div id="guests" class="row guests-row justify-content-between justify-content-md-center align-content-around">
-      <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-9 m-xl-5">
+      <div class="col-12">
         <div class="row">
-          <div class="guest-entry col-12 col-sm-6 col-md-4 col-lg-3 col-xl-4">
+          <div class="guest-entry col-4 col-sm-2 col-md-4 col-lg-4 col-xl-4">
             <div class="guest-info-container hvr-float-shadow">
               <div class="guest-image bugoy-drilon"></div>
               <div class="guest-info">
@@ -116,7 +116,7 @@
               </div>
             </div>
           </div>
-          <div class="guest-entry col-12 col-sm-6 col-md-4 col-lg-3 col-xl-4">
+          <div class="guest-entry col-4 col-sm-2 col-md-4 col-lg-4 col-xl-4">
             <div class="guest-info-container hvr-float-shadow">
               <div class="guest-image daryl-ong"></div>
               <div class="guest-info">
@@ -125,7 +125,7 @@
               </div>
             </div>
           </div>
-          <div class="guest-entry col-12 col-sm-6 col-md-4 col-lg-3 col-xl-4">
+          <div class="guest-entry col-4 col-sm-2 col-md-4 col-lg-4 col-xl-4">
             <div class="guest-info-container hvr-float-shadow">
               <div class="guest-image michael-pangilinan"></div>
               <div class="guest-info">
@@ -134,7 +134,7 @@
               </div>
             </div>
           </div>
-          <div class="guest-entry col-12 col-sm-6 col-md-4 col-lg-3 col-xl-4">
+          <div class="guest-entry col-4 col-sm-2 col-md-4 col-lg-4 col-xl-4">
             <div class="guest-info-container hvr-float-shadow">
               <div class="guest-image liezel-garcia"></div>
               <div class="guest-info">
@@ -143,7 +143,7 @@
               </div>
             </div>
           </div>
-          <div class="guest-entry col-12 col-sm-6 col-md-4 col-lg-3 col-xl-4">
+          <div class="guest-entry col-4 col-sm-2 col-md-4 col-lg-4 col-xl-4">
             <div class="guest-info-container hvr-float-shadow">
               <div class="guest-image jason-dy"></div>
               <div class="guest-info">
@@ -152,7 +152,7 @@
               </div>
             </div>
           </div>
-          <div class="guest-entry col-12 col-sm-6 col-md-4 col-lg-3 col-xl-4">
+          <div class="guest-entry col-4 col-sm-2 col-md-4 col-lg-4 col-xl-4">
             <div class="guest-info-container hvr-float-shadow">
               <div class="guest-image erik-santos"></div>
               <div class="guest-info">
