improvement(the-restaurants): line break on their caption

--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
             A DAZZLING LIGHT SHOW AT THE FOUNTAIN
           </h1>
           <p class="dazzling-details">
-            The Fountain stands as Okada Manila’s bold take on creating a global icon.
+            The Fountain stands as Okada Manila’s bold take on<br />
+            creating a global icon.
           </p>
           <button type="button" class="btn btn-default btn-dark btn-dazzling">
             LEARN MORE
