--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <div class="col-12 col-md-8 col-lg-7 col-xl-7 image-col"></div>
     </div>
     <div id="guestsOther" class="row guests-row justify-content-between justify-content-md-center align-content-around">
-      <div class="col-12">
+      <div class="col-12 p-0">
         <div class="row">
           <div class="guest-entry col-4 col-sm-2 col-md-4 col-lg-4 col-xl-4">
             <div class="guest-info-container hvr-float-shadow">
