style(responsive, desktop, countdown, the-restaurants): changed font, added Gotham alternative, etc

--- a/index.html
+++ b/index.html
@@ -209,19 +209,24 @@
       <div class="col-12 col-md-5 col-lg-5 col-xl-5 the-restaurants-col the-restaurants-cols">
         <div class="the-restaurants-content">
           <div class="the-restaurants-logo"></div>
-          <h1 class="the-restaurants-heading">
+          <h1 class="the-restaurants-heading wow animated fadeInUp" data-wow-delay="0.2s">
             A feast of<br />
             the finest<br />
             holiday flavors
           </h1>
-          <p class="okada-hero-caption text-left">
-            Spread the holiday cheer with family and friends only at Okada Manila's signature restaurants.
+          <p class="okada-hero-caption text-left wow animated fadeInUp" data-wow-delay="0.3s">
+            Spread the holiday cheer<br />
+            with family and friends only at<br />
+            Okada Manila's signature restaurants.
             <br /><br />
-            November 4 — January 4
+            <span class="wow animated fadeInUp" data-wow-delay="0.4s">November 4 — January 4</span>
           </p>
-          <button type="button" class="btn btn-dark btn-dazzling dazzling-text">
+          <button type="button" class="btn btn-dark btn-dazzling dazzling-text dazzling-dark wow animated fadeInUp"
+            data-wow-delay="0.5s">
             LEARN MORE
           </button>
+          <!-- Add Pagination -->
+          <!-- <div class="swiper-pagination"></div> -->
         </div>
       </div>
     </div>
