refactor(cove-manila, svg): replaced DJ SOLAII & DJ KAKA elements into SVGs

--- a/index.html
+++ b/index.html
@@ -242,58 +242,19 @@
       <div class="col-12 col-sm-12 col-md-12 col-lg-12">
         <div class="row cove-manila-row-1-sub-1 justify-content-md-center">
           <div class="col-12 col-sm-12 col-md-12 col-lg-11 col-xl-11 featured-dj-1 wow animated fadeInUp">
-            <div class="row dj-solaii-wrapper">
-              <div class="col-7 dj-solaii-head"></div>
-              <div class="col-5 dj-solaii-details">
-                <div class="dj-solaii-logo"></div>
-                <div class="dj-solaii-desc-wrapper p-1 p-lg-2 p-xl-3">
-                  <p class="dj-solaii-desc">
-                    The genre of DJ Solaii is Techno-Electronic music, focused more on beats and rhythms than vocals or
-                    melody.
-                  </p>
-                </div>
-                <div class="dj-solaii-button-container">
-                  <a href="#" class="btn visit-channel-button wow animated fadeIn fast" data-wow-delay="0.5"
-                    target="_blank">
-                    <h2 class="visit-channel-text">VISIT CHANNEL</h2>
-                  </a>
-                </div>
-              </div>
+            <div class="dj-solaii dj-solaii-container">
+              <iframe class="dj-solaii-svg" src="images/dj-solaii-frame-wtext.svg"></iframe>
             </div>
           </div>
         </div>
-
       </div>
     </div>
     <div class="row cove-manila-row-2">
       <div class="col-12 col-sm-12 col-md-12 col-lg-12">
         <div class="row cove-manila-row-2-sub-1 justify-content-md-center">
-          <div class="col-12 col-sm-12 col-md-12 col-lg-11 col-xl-11 featured-dj-2 p-0">
-            <div class="dj-kaka grid-container">
-              <div class="dj-kaka-head-wrapper wow animated fadeInLeft">
-                <div class="dj-kaka-head"></div>
-              </div>
-              <div class="dj-kaka-details-wrapper wow animated fadeInRight" data-wow-delay="0.2s">
-                <div class="dj-kaka-details-container">
-                  <div class="dj-kaka-details">
-                    <h1 class="dj-kaka-name">
-                      DJ<br />
-                      KAKA
-                    </h1>
-                    <p class="dj-kaka-desc">
-                      Express your feelings on the dancefloor with DJ Kaka's spine tingling music. Be zapped and stunned
-                      as
-                      we roll through a night of electronic dance music.
-                    </p>
-                  </div>
-                </div>
-                <div class="dj-kaka-button-container">
-                  <a href="#" class="btn visit-channel-button wow animated fadeIn fast" data-wow-delay="0.4"
-                    target="_blank">
-                    <h2 class="visit-channel-text">VISIT CHANNEL</h2>
-                  </a>
-                </div>
-              </div>
+          <div class="col-12 col-sm-12 col-md-12 col-lg-11 col-xl-11 featured-dj-2 p-0 wow animated fadeInUp">
+            <div class="dj-kaka dj-kaka-container">
+              <iframe class="dj-kaka-svg" src="images/dj-kaka-frame-wtext.svg"></iframe>
             </div>
           </div>
         </div>
