refactor(index, cove-manila): replaced animations for featured DJs

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
     <div class="row cove-manila-row-1">
       <div class="col-12 col-sm-12 col-md-12 col-lg-12">
         <div class="row cove-manila-row-1-sub-1 justify-content-md-center">
-          <div class="col-12 col-sm-12 col-md-12 col-lg-11 col-xl-11 featured-dj-1 wow animated fadeInUp">
+          <div class="col-12 col-sm-12 col-md-12 col-lg-11 col-xl-11 featured-dj-1 wow animated fadeIn">
             <div class="dj-solaii dj-solaii-container">
               <iframe class="dj-solaii-svg" src="images/dj-solaii-frame-wtext.svg"></iframe>
             </div>
@@ -252,7 +252,7 @@
     <div class="row cove-manila-row-2">
       <div class="col-12 col-sm-12 col-md-12 col-lg-12">
         <div class="row cove-manila-row-2-sub-1 justify-content-md-center">
-          <div class="col-12 col-sm-12 col-md-12 col-lg-11 col-xl-11 featured-dj-2 p-0 wow animated fadeInUp">
+          <div class="col-12 col-sm-12 col-md-12 col-lg-11 col-xl-11 featured-dj-2 p-0 wow animated fadeIn">
             <div class="dj-kaka dj-kaka-container">
               <iframe class="dj-kaka-svg" src="images/dj-kaka-frame-wtext.svg"></iframe>
             </div>
