refactor(index, wrapper, grid): added wrapper to body
to provide better view on xlarge devices

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <![endif]-->
 </head>
 
-<body id="top">
+<body id="top" class="container-wrapper">
   <nav id="navBar" class="navbar navbar-dark justify-content-center okada">
     <a class="navbar-brand mx-auto" href="#">
       <img src="images/okada-logo-small.png" width="41" />
