--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
           </div>
         </div>
         <div class="row cove-manila-row-2-sub-2 justify-content-md-center">
-          <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-5 featured-dj-below">
+          <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-5 featured-dj-below">
             <div class="featured-dj-below-profile carlo-atendido wow animated fadeInDown">
               <div class="featured-dj-below-profile-image"></div>
               <div class="featured-dj-below-profile-details">
@@ -268,7 +268,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-5 featured-dj-below">
+          <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-5 featured-dj-below">
             <div class="featured-dj-below-profile everyday-people wow animated fadeInDown" data-wow-delay="0.2s">
               <div class="featured-dj-below-profile-image"></div>
               <div class="featured-dj-below-profile-details">
@@ -339,6 +339,8 @@
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"
     integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-mobile/1.4.5/jquery.mobile.theme.min.css"
+    integrity="sha256-Jo+cRJF2CXskavcv9tXuHiP03KBUM6SqPRDDAV+LQEE=" crossorigin="anonymous" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
     integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
     crossorigin="anonymous"></script>
