refactor(dom, native, svg): clickable svg native's answer to bugs for mobile

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     <div id="coveManila" class="row cove-manila-row text-center">
       <div class="col-12 col-sm-12 col-md-12 col-lg-12">
         <div class="cove-manila-logo mx-auto"></div>
-        <p class="cove-manila-logo-caption wow animated zoomIn">
+        <p class="cove-manila-logo-caption wow animated zoomIn" data-wow-delay="0.3s" data-wow-offset="10">
           LITERALLY THE LAST PARTY OF THE YEAR
         </p>
       </div>
@@ -269,7 +269,7 @@
           data-wow-offset="250">
           <div class="col-12 col-sm-12 col-md-12 col-lg-11 col-xl-11 featured-dj-1">
             <div class="dj-solaii dj-solaii-container">
-              <iframe class="dj-solaii-svg" src="images/dj-solaii-frame-wtext.svg"></iframe>
+              <iframe id="djSolaiiSvg" class="dj-solaii-svg" src="images/dj-solaii-frame-wtext.svg"></iframe>
             </div>
           </div>
         </div>
@@ -281,7 +281,7 @@
           data-wow-offset="250">
           <div class="col-12 col-sm-12 col-md-12 col-lg-11 col-xl-11 featured-dj-2 p-0">
             <div class="dj-kaka dj-kaka-container">
-              <iframe class="dj-kaka-svg" src="images/dj-kaka-frame-wtext.svg"></iframe>
+              <iframe id="djKakaSvg" class="dj-kaka-svg" src="images/dj-kaka-frame-wtext.svg"></iframe>
             </div>
           </div>
         </div>
