improvement(grid, responsive, mobile): hero section changes

--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
 
         <div class="okada-hero wow animated fadeIn" data-wow-delay="1s">
           <h1 class=" okada-hero-heading">
-            Okada Manila is taking its New<br />
-            Year’s Eve celebrations to bigger,<br />
+            Okada Manila is taking its New<br class="d-none d-md-block" />
+            Year’s Eve celebrations to bigger,<br class="d-none d-md-block" />
             more extravagant levels.
           </h1>
           <p class="okada-hero-caption">
-            It’s a full explosion of spectacular performances and<br />
-            special treats that will make this night of partying the<br />
+            It’s a full explosion of spectacular performances and<br class="d-none d-md-block" />
+            special treats that will make this night of partying the<br class="d-none d-md-block" />
             metro’s most unforgettable one.
           </p>
         </div>
@@ -123,7 +123,8 @@
     <div id="guests" class="row the-company-row justify-content-center">
       <div class="col-12 col-md-4 col-lg-5 col-xl-4 heading-col">
         <img class="the-company-logo" src="images/the-company@2x.png" />
-        <br /><br />
+        <br class="d-none d-md-block" />
+        <br class="d-none d-md-block" />
         <p class="okada-hero-caption">
           The Company. Asia’s premiere vocal harmony act was formed in July, 1985 by alumni of the Ateneo College Glee
           Club. Initially, they sang as back up vocalists for the country's reigning pop stars of the '80's before
@@ -200,7 +201,8 @@
             A DAZZLING LIGHT SHOW AT THE FOUNTAIN
           </h1>
           <p class="dazzling-details">
-            The Fountain stands as Okada Manila’s bold take on<br />
+            The Fountain stands as Okada Manila’s bold take on
+            <br class="d-none d-md-block" />
             creating a global icon.
           </p>
           <button type="button" class="btn btn-default btn-dark btn-dazzling">
@@ -240,10 +242,11 @@
             holiday flavors
           </h1>
           <p class="okada-hero-caption text-left wow animated fadeInUp" data-wow-delay="0.3s">
-            Spread the holiday cheer<br />
-            with family and friends only at<br />
+            Spread the holiday cheer<br class="d-block" />
+            with family and friends only at<br class="d-block" />
             Okada Manila's signature restaurants.
-            <br /><br />
+            <br class="d-block" />
+            <br class="d-block" />
             <span class="wow animated fadeInUp" data-wow-delay="0.4s">November 4 — January 4</span>
           </p>
           <button type="button" class="btn btn-dark btn-dazzling dazzling-text dazzling-dark wow animated fadeInUp"
