refactor(responsive, ui, mobile, desktop): adjustments after QA feedback

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       </div>
     </div>
     <div id="worldClass" class="row world-class-row justify-content-center">
-      <div class="col-12 col-md-4 col-lg-5 col-xl-4 heading-col">
+      <div class="col-12 col-md-4 col-lg-5 col-xl-3 heading-col">
         <h1 class="okada-hero-heading text-center text-md-left">
           WORLD CLASS ENTERTAINMENT
         </h1>
@@ -118,11 +118,11 @@
           At Okada Manila, Entertainment is paramount to the complete guest experience.
         </p>
       </div>
-      <div class="col-12 col-md-8 col-lg-7 col-xl-7 image-col"></div>
+      <div class="col-12 col-md-8 col-lg-7 col-xl-6 image-col"></div>
     </div>
     <div id="guests" class="row the-company-row justify-content-center">
-      <div class="col-12 col-md-4 col-lg-5 col-xl-4 heading-col">
-        <img class="the-company-logo" src="images/the-company@2x.png" />
+      <div class="col-12 col-md-4 col-lg-5 col-xl-3 heading-col">
+        <img class="the-company-logo" src="images/the-company@3x.png" />
         <br class="d-none d-md-block" />
         <br class="d-none d-md-block" />
         <p class="okada-hero-caption">
@@ -131,7 +131,7 @@
           turning professional as the headlining concert and recording artists that they are today.
         </p>
       </div>
-      <div class="col-12 col-md-8 col-lg-7 col-xl-7 image-col"></div>
+      <div class="col-12 col-md-8 col-lg-7 col-xl-6 image-col"></div>
     </div>
     <div id="guestsOther" class="row guests-row justify-content-between justify-content-md-center align-content-around">
       <div class="col-12 p-0">
@@ -193,8 +193,8 @@
         </div>
       </div>
     </div>
-    <div id="theFountain" class="row night-show-row">
-      <div class="col-12 col-sm-12 col-md-12 col-lg-12 night-show-col">
+    <div id="theFountain" class="row night-show-row justify-content-center">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-9 night-show-col">
         <div class="night-show-logo"></div>
         <div class="night-show-details">
           <h1 class="dazzling">
