--- a/index.html
+++ b/index.html
@@ -36,16 +36,17 @@
 
 <body id="top" class="container-wrapper" style="overflow: hidden">
   <nav id="navBar" class="navbar navbar-dark justify-content-center okada">
-    <a class="navbar-brand mx-auto" href="#">
+    <a id="navBrand" class="navbar-brand mx-auto" href="#">
       <img src="images/okada-logo-small.png" width="41" />
     </a>
-    <button id="openNav" class="navbar-toggler navbar-toggler-right" type="button" data-target="#myNav"
-      aria-controls="myNav" aria-expanded="true" aria-label="Toggle navigation">
+    <button id="openNav" class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+      data-target="#myNav" aria-controls="myNav" aria-expanded="true" aria-label="Toggle navigation">
+      <!-- <span class="my-1 mx-2 close" id="closeNav">&times;</span> -->
+      <span class="my-1 mx-2 close closebtn" id="closeNav">X</span>
       <span class="navbar-toggler-icon"></span>
     </button>
   </nav>
   <div id="myNav" class="nav-overlay">
-    <a href="javascript:void(0)" class="closebtn" id="closeNav">&times;</a>
     <div class="overlay-content">
       <a class="nav-modal-link" href="#top">Home</a>
       <a class="nav-modal-link" href="#worldClass">World Class Entertainment</a>
@@ -78,7 +79,7 @@
   <a href="#top" id="return-to-top" class="return-to-top"><i class="fa fa-chevron-up"></i></a>
   <!-- Main Container -->
   <div class="container-fluid main-container">
-    <div class="row hero-row justify-content-lg-center">
+    <div class="row hero-row justify-content-sm-center justify-content-lg-center">
       <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-0">
         <div class="grid">
           <div class="image-2020 wow animated fadeIn delay-1s"></div>
@@ -110,7 +111,7 @@
       </div>
     </div>
     <div id="worldClass" class="row world-class-row justify-content-center">
-      <div class="col-12 col-md-4 col-lg-5 col-xl-3 heading-col">
+      <div class="col-12 col-sm-5 col-md-4 col-lg-5 col-xl-4 heading-col">
         <h1 class="okada-hero-heading text-center text-md-left">
           WORLD CLASS ENTERTAINMENT
         </h1>
@@ -118,10 +119,10 @@
           At Okada Manila, Entertainment is paramount to the complete guest experience.
         </p>
       </div>
-      <div class="col-12 col-md-8 col-lg-7 col-xl-6 image-col"></div>
+      <div class="col-12 col-sm-8 col-md-8 col-lg-7 col-xl-6 image-col"></div>
     </div>
     <div id="guests" class="row the-company-row justify-content-center">
-      <div class="col-12 col-md-4 col-lg-5 col-xl-3 heading-col">
+      <div class="col-12 col-sm-5 col-md-4 col-lg-5 col-xl-4 heading-col">
         <img class="the-company-logo" src="images/the-company@3x.png" />
         <br class="d-none d-md-block" />
         <br class="d-none d-md-block" />
@@ -131,7 +132,7 @@
           turning professional as the headlining concert and recording artists that they are today.
         </p>
       </div>
-      <div class="col-12 col-md-8 col-lg-7 col-xl-6 image-col"></div>
+      <div class="col-12 col-sm-6 col-md-8 col-lg-7 col-xl-6 image-col"></div>
     </div>
     <div id="guestsOther" class="row guests-row justify-content-between justify-content-md-center align-content-around">
       <div class="col-12 p-0">
@@ -194,7 +195,7 @@
       </div>
     </div>
     <div id="theFountain" class="row night-show-row justify-content-center">
-      <div class="col-12 col-sm-12 col-md-12 col-lg-9 night-show-col">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-9 night-show-col">
         <div class="night-show-logo"></div>
         <div class="night-show-details">
           <h1 class="dazzling">
