refactor(hero, index, responsive): added line break for world class text (md & up)

--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
     <div id="worldClass" class="row world-class-row justify-content-center">
       <div class="col-12 col-sm-5 col-md-4 col-lg-5 col-xl-4 heading-col">
         <h1 class="okada-hero-heading text-center text-md-left">
-          WORLD CLASS ENTERTAINMENT
+          WORLD CLASS<br class="d-none d-md-block" />
+          ENTERTAINMENT
         </h1>
         <p class="okada-hero-caption text-center text-md-left">
           At Okada Manila, Entertainment is paramount to the complete guest experience.
