refactor(responsive, ios, ipad, ipad-pro): adjustments for tablets

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
       <div class="col-12 col-sm-12 col-md-12 col-lg-12">
         <div class="row cove-manila-row-2-sub-1 justify-content-md-center wow animated fadeInRight"
           data-wow-offset="250">
-          <div class="col-12 col-sm-12 col-md-12 col-lg-11 col-xl-11 featured-dj-2 p-0">
+          <div class="col-12 col-sm-12 col-md-12 col-lg-11 col-xl-11 featured-dj-2 p-0 p-md-5 p-lg-0 p-xl-0">
             <div class="dj-kaka dj-kaka-container">
               <iframe id="djKakaSvg" class="dj-kaka-svg" src="images/dj-kaka-frame-wtext.svg"></iframe>
             </div>
