refactor(test, responsive, cove-manila, desktop): display: flex on cove manila for larger screens

--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
     <div class="row countdown-row justify-content-center">
       <div class="col-12 col-sm-12 col-md-12 col-lg-9 col-xs-9">
         <div id="countdown" class="countdown-container">
-          <div class="number-of days wow fadeInDown animated" data-wow-delay="0.2s">00</div>
-          <div class="number-of hours wow fadeInDown animated" data-wow-delay="0.4s">00</div>
-          <div class="number-of minutes wow fadeInDown animated" data-wow-delay="0.6s">00</div>
-          <div class="number-of seconds wow fadeInDown animated" data-wow-delay="0.8s">00</div>
+          <div class="number-of days wow fadeInDown animated" data-wow-delay="0.8s">00</div>
+          <div class="number-of hours wow fadeInDown animated" data-wow-delay="1.0s">00</div>
+          <div class="number-of minutes wow fadeInDown animated" data-wow-delay="1.2s">00</div>
+          <div class="number-of seconds wow fadeInDown animated" data-wow-delay="1.4s">00</div>
         </div>
 
-        <div class="okada-hero wow animated fadeIn" data-wow-delay="1s">
+        <div class="okada-hero wow animated fadeIn" data-wow-delay="0.8s">
           <h1 class=" okada-hero-heading">
             Okada Manila is taking its New<br class="d-none d-md-block" />
             Year’s Eve celebrations to bigger,<br class="d-none d-md-block" />
@@ -281,7 +281,7 @@
       </div>
     </div>
     <div class="row cove-manila-row-2">
-      <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-12 cove-manila-row-2-col">
         <div class="row cove-manila-row-2-sub-1 justify-content-md-center wow animated fadeInRight"
           data-wow-offset="250">
           <div class="col-12 col-sm-12 col-md-12 col-lg-11 col-xl-11 featured-dj-2 p-0 p-md-5 p-lg-0 p-xl-0">
