--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
   <title>Okada Manila NYE 2019</title>
 
-  <link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
-  <link href="stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
+  <!-- <link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> -->
+  <!-- <link href="stylesheets/print.css" media="print" rel="stylesheet" type="text/css" /> -->
   <link href="stylesheets/swiper.min.css" rel="stylesheet" type="text/css" />
 
   <!-- Spinkit -->
@@ -381,6 +381,9 @@
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
   <script src="scripts/jquery.smoothscroll.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-smooth-scroll/2.2.0/jquery.smooth-scroll.min.js"
+    integrity="sha512-0tWfLL+YANip9Uo2YUY4/SxvwDgPUuoSUcIXPFULXiXXgLKmiC/qCeDxnhl+mLobu6e/dSlyhGheCtzd9+RLCw=="
+    crossorigin="anonymous"></script>
   <script src="scripts/custom.min.js"></script>
   <script src="scripts/wow.min.js"></script>
 </body>
